examples/errors/brackets-correct.tex
\documentclass{article}
\usepackage{amsmath,amssymb}
\begin{document}
\[ A = \{x\in\mathbb{N}:x<10\} \]
\end{document}
